--- a/content1.html
+++ b/content1.html
@@ -46,64 +46,64 @@ $(this).ImgZoomIn();
 
 <body>
 <div id="content">
-  <img id="left" src="99.png" width="40px" > 
+  <img id="left" src="img/99.png" width="40px" > 
   <h3>秦昊聪Qed.10</h3>
   <h6>2017年6月5号</h6>
   <h4> 平时不好意思发合照，但照片裡的太太实在是太美了，必须与你们分享。
 我和我的太太，我们的婚纱照。</h4>
 <div id="photo">
 <ul>
-<li><img src="story11.jpg" width="100px" height="60px" class="exampleImg" id="imgTest"></li>
-<li><img src="22.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
-<li><img src="story33.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
-<li><img src="story22.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/story11.jpg" width="100px" height="60px" class="exampleImg" id="imgTest"></li>
+<li><img src="img/22.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/story33.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/story22.jpg" width="100px" class="exampleImg" onClick="$(this).ImgZoomIn();"/></li>
 </ul>
 </div>
 </div>
 <div id="content1">
-  <img id="left" src="99.png" width="40px" > 
+  <img id="left" src="img/99.png" width="40px" > 
   <h3>秦昊聪Qed.10</h3>
   <h6>2017年5月5号</h6>
   <h4> 有的时候，一个人认真读书的样子也可以很帅哦~</h4>
 <div id="photo">
 <ul>
-<li><img src="jiage1.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();" ></li>
-<li><img src="jiage2.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
-<li><img src="jiage3.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
-<li><img src="jiage4.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/jiage1.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();" ></li>
+<li><img src="img/jiage2.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/jiage3.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
+<li><img src="img/jiage4.jpg" width="100px" height="60px" onClick="$(this).ImgZoomIn();"/></li>
 </ul>
 </div>
 </div>
 <div id="content2">
-  <img id="left" src="99.png" width="40px" > 
+  <img id="left" src="img/99.png" width="40px" > 
   <h3>秦昊聪Qed.10</h3>
   <h6>2017年4月1号</h6>
   <h4> 今天是愚人节，希望大家恶作剧愉快~</h4>
 <div id="photo">
 <ul>
-<li><img src="555.jpg.gif" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
+<li><img src="img/555.jpg.gif" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
 </ul>
 </div>
 </div>
 <div id="content3">
-  <img id="left" src="99.png" width="40px" > 
+  <img id="left" src="img/99.png" width="40px" > 
   <h3>秦昊聪Qed.10</h3>
   <h6>2017年3月23日</h6>
   <h4> 今天是我的生日，又长大一岁，希望自己可以更懂事，在遇到麻烦的时候b不惊慌失措，当然了，没有麻烦最好！！！</h4>
 <div id="photo">
 <ul>
-<li><img src="456.gif" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
+<li><img src="img/456.gif" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
 </ul>
 </div>
 </div>
 <div id="content4">
-  <img id="left" src="99.png" width="40px" > 
+  <img id="left" src="img/99.png" width="40px" > 
   <h3>秦昊聪Qed.10</h3>
   <h6>2017年2月14日</h6>
   <h4> 今天是一个喂狗粮的好日子那么就让我开动吧！</h4>
 <div id="photo">
 <ul>
-<li><img src="story2.jpg" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
+<li><img src="img/story2.jpg" width="215px" height="150px" onClick="$(this).ImgZoomIn();" ></li>
 </ul>
 </div>
 </div>
