--- a/contentall.html
+++ b/contentall.html
@@ -6,15 +6,15 @@
 <link rel="stylesheet" href="详细页.css" type="text/css" />
 <script src="详细页.js" ></script>
 </head>
-<body background="back.jpg" >
+<body background="img/back.jpg" >
 <nav> 
-   <ul><li><a href="详细页.html">Our love story </a></li>
-   <li><a href="详细页.html"> A story centered on him</a></li>
-   <li><a href="详细页.html">Leading lady</a></li>
-   <li><a href="主页面.html">Home Page</a></li>
+   <ul><li><a href="contentall.html">Our love story </a></li>
+   <li><a href="contentall.html"> A story centered on him</a></li>
+   <li><a href="contentall.html">Leading lady</a></li>
+   <li><a href="index.html">Home Page</a></li>
    </ul>
 </nav>
-	<div id="background"><img src="99.png" width="120px" height="120px" style="position: absolute; top:150px;left: 680px">
+	<div id="background"><img src="img/99.png" width="120px" height="120px" style="position: absolute; top:150px;left: 680px">
 	<p style="height:30px; position: absolute;top: 275px;margin-left: 350px;width: 190px;">秦昊聪Qed.10<font size="-5">(家鸽）</font></p>
 	<input type="submit" value="详细信息" onClick="javascript:window.location.href='qqq.html'">
 	</div>
