--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ window.onload=function(){
 </style>
 <body><div id="lunbo">
     <ul>
-        <li><img src="story1.jpg"></li>
-        <li><img src="story2.jpg"></li>
-        <li><img src="story3.jpg"></li>
-        <li><img src="story4.jpg"></li>
+        <li><img src="img/story1.jpg"></li>
+        <li><img src="img/story2.jpg"></li>
+        <li><img src="img/story3.jpg"></li>
+        <li><img src="img/story4.jpg"></li>
     </ul>
 </div>
 <script type="text/javascript">
@@ -88,9 +88,9 @@ Nice to share it with you. </div>
 	</div></div>
 <nav>
 	<ul>
-	<div class="b"><li><a href="详细页.html"><img src="story5.jpg"><span>About our story</span></a></li></div>
-		<div class="c"><li><a href="详细页.html"><img src="11.jpg"><span>It's me</span></a></li>
-		<li><a href="详细页.html"><img src="22.jpg"><span>It's my wife</span></a></li></div>
+	<div class="b"><li><a href="contentall.html"><img src="img/story5.jpg"><span>About our story</span></a></li></div>
+		<div class="c"><li><a href="contentall.html"><img src="img/11.jpg"><span>It's me</span></a></li>
+		<li><a href="contentall.html"><img src="img/22.jpg"><span>It's my wife</span></a></li></div>
 	</ul>
 </nav>
 </body>
