--- a/join.html
+++ b/join.html
@@ -162,8 +162,8 @@ padding-left: 45px;
  <input type="submit" value="忘记密码？"></div> 
 
             <div class="login_btn">
-            	<input type="submit" value="注册" onclick="javascript:window.location.href='注册.html'"> 
-    	        <input type="submit" value="登陆" onclick="javascript:window.location.href='主页面.html'"> 
+            	<input type="submit" value="注册" onclick="javascript:window.location.href='biaodan.html'"> 
+    	        <input type="submit" value="登陆" onclick="javascript:window.location.href='index.html'"> 
                 </div>
             </th></tr>
         
