--- a/qqq.html
+++ b/qqq.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 <style type="text/css">
-	body {background-image: url(background.jpg) ;}
+	body {background-image: url(img/background.jpg) ;}
 	div.background{background-color: rgba(182,251,188,1.00); padding: 20px,10px,20px,10px; }
 	}</style>
 
@@ -21,7 +21,7 @@
    <li><a href="#experience">难忘的经历</a></li>
    <li><a href="#age">成长经历</a></li>
    <li><a href="#homeland">我的家乡</a></li>
-   <li><a href="详细页.html">story</a></li>
+   <li><a href="contentall.html">story</a></li>
    
    </ul>
 </nav>
@@ -37,7 +37,7 @@
 
 
 
-<p class="background"><font color="#000000">我叫秦昊聪，来自软件一班<img src="s0.jpg" width="200px" height="200px" >。我是河南安阳人，有着地道安阳人的开朗与豪爽。不时装一下文艺青年，其实是个乐观小帅哥- -<hr style="background-color: #000000"></font>
+<p class="background"><font color="#000000">我叫秦昊聪，来自软件一班<img src="img/s0.jpg" width="200px" height="200px" >。我是河南安阳人，有着地道安阳人的开朗与豪爽。不时装一下文艺青年，其实是个乐观小帅哥- -<hr style="background-color: #000000"></font>
 </p>
 <br>
 <section id="information">
@@ -56,7 +56,7 @@
 
 
 <br>
-<section id="favorite"><img src="张国荣.jpg"/ style="margin-top: 60px">
+<section id="favorite"><img src="img/张国荣.jpg"/ style="margin-top: 60px">
 	<h3><font color="#000000">个人爱好</font></h3></section>
 <ul>
 	<font color=#000000><li>打篮球</li>
@@ -120,7 +120,7 @@
 <h3><font class="lead" size="+3" color="#000">我的家乡是河南安阳！！！</font></h3></section>
 <br>
 <p><font color="#000000">
-安阳，简称殷、邺<img src="d000baa1cd11728ba044612ecffcc3cec3fd2c55.jpg" width="300px" height="400px">，位于河南省最北部，地处河南、河北、山西三省交界，西倚太行山，东连华北平原，北邻邯郸，南接鹤壁、新乡。安阳是甲骨文发现地，周易发源地，中国国家历史文化名城，中国八大古都之一，早期中国文明的中心。先后有商朝以及曹魏、后赵、冉魏、前燕、东魏、北齐等七朝在此建都，有“七朝古都”之称，安阳殷墟是中国史上第一个有文献可考、并为考古学和甲骨文所证实的都城遗址。有殷墟和中国大运河（永济渠）两处世界文化遗产。</font></p>
+安阳，简称殷、邺<img src="img/d000baa1cd11728ba044612ecffcc3cec3fd2c55.jpg" width="300px" height="400px">，位于河南省最北部，地处河南、河北、山西三省交界，西倚太行山，东连华北平原，北邻邯郸，南接鹤壁、新乡。安阳是甲骨文发现地，周易发源地，中国国家历史文化名城，中国八大古都之一，早期中国文明的中心。先后有商朝以及曹魏、后赵、冉魏、前燕、东魏、北齐等七朝在此建都，有“七朝古都”之称，安阳殷墟是中国史上第一个有文献可考、并为考古学和甲骨文所证实的都城遗址。有殷墟和中国大运河（永济渠）两处世界文化遗产。</font></p>
 <hr>
 </div></body>
 </html>
