--- a/contentall.html
+++ b/contentall.html
@@ -12,6 +12,7 @@
    <li><a href="contentall.html"> A story centered on him</a></li>
    <li><a href="contentall.html">Leading lady</a></li>
    <li><a href="index.html">Home Page</a></li>
+   <li><a href="join.html">sign in</a></li>
    </ul>
 </nav>
 	<div id="background"><img src="img/99.png" width="120px" height="120px" style="position: absolute; top:150px;left: 680px">
