--- a/qqq.html
+++ b/qqq.html
@@ -22,6 +22,7 @@
    <li><a href="#age">成长经历</a></li>
    <li><a href="#homeland">我的家乡</a></li>
    <li><a href="contentall.html">story</a></li>
+   <li><a href="join.html">登陆</a></li>
    
    </ul>
 </nav>
