--- a/join.html
+++ b/join.html
@@ -140,13 +140,13 @@ padding-left: 45px;
 	font-size: 50px;
 }
 	</style>
-<body align="center" background="321.gif" >
+<body align="center" background="img/321.gif" >
 <table align="center"  style="margin:300px 300px 300px 300px; background-color:; height:250px; border:0; opacity:0.8"; radius=5px;>
 <tr>
 <th>	  
 <div clss="head">
 
- <img src="321.gif" id="img"/>	
+ <img src="img/321.gif" id="img"/>	
 </th>
 <div class="font">Enter your stoury</div>
 
