--- a/content2.html
+++ b/content2.html
@@ -3,11 +3,11 @@
 <html xmlns:fb="http://ogp.me/ns/fb#" itemscope itemtype="http://schema.org/Blog">
     <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link href="../adipoli/css/demo.css" rel="stylesheet" type="text/css"/>
-        <link href="../adipoli/css/adipoli.css" rel="stylesheet" type="text/css"/>
+        <link href="css/demo.css" rel="stylesheet" type="text/css"/>
+        <link href="css/adipoli.css" rel="stylesheet" type="text/css"/>
         <link rel="shortcut icon" href="http://jobyj.in/favicon.ico" />
-        <script src="../adipoli/js/jquery-1.7.1.js" type="text/javascript"></script>
-     <script src="../adipoli/js/jquery.adipoli.min.js" type="text/javascript"></script>
+        <script src="js/jquery-1.7.1.js" type="text/javascript"></script>
+     <script src="js/jquery.adipoli.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             
           $(function(){
@@ -34,7 +34,7 @@
 </div>
 
             <div class="effect-container">
-				<div class="effect-details"><font>2017年12月</font></div>
+				<div class="effect-details">2017年12月</div>
                 <img class="img-style row1" src="img/story11.jpg"/>
                 <img class="img-style row1" src="img/story22.jpg"/>
                 <img class="img-style row1" src="img/story33.jpg"/>
